--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -58,6 +58,12 @@
   font-size: clamp(2rem, 8vw, 6rem);
 }
 
+@media (max-width: 768px) {
+  .text-hero, .preloader-name {
+    font-size: clamp(1rem, 5vw, 3rem);
+  }
+}
+
 .text-title {
   font-size: clamp(1.5rem, 5vw, 4rem);
 }
